--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Clipboard landing page</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
+   <header>
+     <img src="./images/logo.svg" alt="">
+     <h1>
+      A history of everything you copy
+     </h1>
+     <p>
+      Clipboard allows you to track and organize everything you 
+      copy. Instantly access your clipboard on all your devices.
+     </p>
+     <button id="button_1">Download for iOS</button>
+     <button id="button_2">Download for Mac</button>
+   </header>
 
-  A history of everything you copy
+   <main>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+   </main>
 
-  Download for iOS
-  Download for Mac
-
+  
+  
   Keep track of your snippets
 
   Clipboard instantly stores any item you copy in the cloud, 
@@ -78,10 +89,10 @@
   Install Guide
   
   <footer>
-    <p class="attribution">
+    <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
