--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   
   <title>Frontend Mentor | Clipboard landing page</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <!-- <style>
@@ -17,7 +20,7 @@
 </head>
 <body>
    <header>
-     <img src="./images/logo.svg" alt="">
+     <img src="./images/logo.svg" alt="logo">
      <h1>
       A history of everything you copy
      </h1>
@@ -25,8 +28,10 @@
       Clipboard allows you to track and organize everything you 
       copy. Instantly access your clipboard on all your devices.
      </p>
+     <div class="buttons">
      <button id="button_1">Download for iOS</button>
      <button id="button_2">Download for Mac</button>
+    </div>
    </header>
 
    <main>
