--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      </h1>
      <p>
       Clipboard allows you to track and organize everything you 
-      copy. Instantly access your clipboard on all your devices.
+      copy. Instantly<br/> access your clipboard on all your devices.
      </p>
      <div class="buttons">
      <button id="button_1">Download for iOS</button>
