--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
    </header>
 
    <main>
-
+       <div class="snippets">
+       <h2>Keep track of your snippets</h2>
+       <p>Clipboard instantly stores any item you copy in the cloud, 
+        meaning you can access your snippets immediately on all your 
+        devices. Our Mac and iOS apps will help you organize everything.</p>
+       </div>
    </main>
 
   
   
   Keep track of your snippets
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  
 
   Quick Search
 
