list container html done

--- a/index.html
+++ b/index.html
@@ -41,25 +41,43 @@
         meaning you can access<br/> your snippets immediately on all your 
         devices. Our Mac and iOS apps will help you<br/>organize everything.</p>
        </div>
+       
+       <div class="features">
+          <img src="./images/image-computer.png" alt="">
+          <div class="list">
+             <div class="list_item1">
+                <h3>Quick Search</h3>
+                <p>Easily search your snippets by content, category, web address, application, and more.</p>
+             </div>
+             <div class="list_item2">
+              <h3>iCloud Sync</h3>
+              <p>Instantly saves and syncs snippets across all your devices.</p>
+             </div>
+             <div class="list_item3">
+              <h3>Complete History</h3>
+                <p>Retrieve any snippets from the first moment you started using the app.</p>
+             </div>
+          </div>
+       </div>
+
    </main>
 
   
   
-  Keep track of your snippets
+  
+  
 
   
 
-  Quick Search
+  
 
-  Easily search your snippets by content, category, web address, application, and more.
 
-  iCloud Sync
 
-  Instantly saves and syncs snippets across all your devices.
+  
 
-  Complete History
+  
 
-  Retrieve any snippets from the first moment you started using the app.
+  
 
   Access Clipboard anywhere
 
