--- a/index.html
+++ b/index.html
@@ -47,17 +47,23 @@
           <div class="list">
              <div class="list_item1">
                 <h3>Quick Search</h3>
-                <p>Easily search your snippets by content, category, web address, application, and more.</p>
+                <p>Easily search your snippets by content,<br/> category, web address, application, and more.</p>
              </div>
              <div class="list_item2">
               <h3>iCloud Sync</h3>
-              <p>Instantly saves and syncs snippets across all your devices.</p>
+              <p>Instantly saves and syncs snippets across all<br/> your devices.</p>
              </div>
              <div class="list_item3">
               <h3>Complete History</h3>
-                <p>Retrieve any snippets from the first moment you started using the app.</p>
+                <p>Retrieve any snippets from the first moment<br/> you started using the app.</p>
              </div>
           </div>
+       </div>
+
+       <div class="clipboard">
+          <h2>Access Clipboard anywhere</h2>
+          <p> Whether you’re on the go, or at your computer, you can access all your Clipboard 
+            snippets in a few simple clicks.</p>
        </div>
 
    </main>
@@ -79,10 +85,9 @@
 
   
 
-  Access Clipboard anywhere
+  
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
+ 
 
   Supercharge your workflow
 
