--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
        <div class="clipboard">
           <h2>Access Clipboard anywhere</h2>
-          <p> Whether you’re on the go, or at your computer, you can access all your Clipboard 
+          <p> Whether you’re on the go, or at your computer, you can access all your Clipboard<br/> 
             snippets in a few simple clicks.</p>
        </div>
 
