--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
           <p> Whether you’re on the go, or at your computer, you can access all your Clipboard<br/> 
             snippets in a few simple clicks.</p>
        </div>
+       
+       <div class="image">
+         <img src="./images/image-devices.png" alt="phone">
+       </div>
 
    </main>
 
