.workflow container done

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
        <div class="image">
          <img src="./images/image-devices.png" alt="phone">
        </div>
+        
+       <div class="workflow">
+        <h2>Supercharge your workflow</h2>
+        <p> We’ve got the tools to boost your productivity.</p>
+     </div>
 
    </main>
 
@@ -93,9 +98,9 @@
 
  
 
-  Supercharge your workflow
+ 
 
-  We’ve got the tools to boost your productivity.
+  
 
   Create blacklists
 
