--- a/index.html
+++ b/index.html
@@ -74,7 +74,29 @@
         <h2>Supercharge your workflow</h2>
         <p> We’ve got the tools to boost your productivity.</p>
      </div>
+     
 
+     <div class="feat">
+       <div class="one_1">
+         <img src="./images/icon-blacklist.svg" alt="blacklist">
+         <h3>Create blacklists</h3>
+         <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+        </p>
+       </div>
+
+       <div class="two_2">
+        <img src="./images/icon-text.svg" alt="text">
+        <h3>Plain text snippets</h3>
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+      </div>
+
+      <div class="three_3">
+        <img src="./images/icon-preview.svg" alt="preview">
+        <h3>Sneak preview</h3>
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div>
+
+     </div>
    </main>
 
   
@@ -102,17 +124,16 @@
 
   
 
-  Create blacklists
+  
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+  
+  
 
-  Plain text snippets
+  
 
-  Remove unwanted formatting from copied text for a consistent look.
+  
 
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
+  
 
   Clipboard for iOS and Mac OS
 
