--- a/index.html
+++ b/index.html
@@ -95,8 +95,17 @@
         <h3>Sneak preview</h3>
         <p>Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
-
      </div>
+
+
+     <div class="image_cont">
+      <img src="./images/logo-google.png" alt="google">
+      <img src="./images/logo-ibm.png" alt="ibm">
+      <img src="./images/logo-microsoft.png" alt="logo-microsoft">
+      <img src="./images/logo-hp.png" alt="logo-hp">
+      <img src="./images/logo-vector-graphics.png" alt="logo-vector-graphics">
+     </div>
+
    </main>
 
   
