.foot cont done

--- a/index.html
+++ b/index.html
@@ -106,51 +106,26 @@
       <img src="./images/logo-vector-graphics.png" alt="logo-vector-graphics">
      </div>
 
+
+     <div class="foot">
+      <p>
+      Clipboard for iOS and Mac OS
+      </p>
+      <p>
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud <br/> 
+        and you’re ready to start adding to your clipboard.
+      </p>
+      <div class="buttons">
+      <button id="button_1">Download for iOS</button>
+      <button id="button_2">Download for Mac</button>
+     </div>
+     </div>
    </main>
 
   
   
   
   
-
-  
-
-  
-
-
-
-  
-
-  
-
-  
-
-  
-
- 
-
- 
-
-  
-
-  
-
-  
-  
-
-  
-
-  
-
-  
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
 
   FAQs
   Contact Us
