--- a/index.html
+++ b/index.html
@@ -127,17 +127,36 @@
   
   
 
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
+
+  
+  
+ 
   
   <footer>
     <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p> -->
+
+
+    <div class=".image_1">
+      <img src="./images/logo.svg" alt="logo">
+
+      <div class="content">
+        <span>FAQs</span>
+        <span>Contact Us</span>
+        <span>Privacy Policy</span>
+        <span>Press Kit</span>
+        <span> 
+          Install Guide</span>
+      </div>
+
+      <div class="socials">
+        <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook"></a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram"></a>
+        <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter"></a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
