modified css for the .foot and the image cont

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
       Clipboard for iOS and Mac OS
       </p>
       <p>
-        Available for free on the App Store. Download for Mac or iOS, sync with iCloud <br/> 
-        and you’re ready to start adding to your clipboard.
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud and<br/> you’re ready to start adding to your clipboard.
       </p>
       <div class="buttons">
       <button id="button_1">Download for iOS</button>
@@ -121,16 +120,6 @@
      </div>
      </div>
    </main>
-
-  
-  
-  
-  
-
-
-  
-  
- 
   
   <footer>
     <!-- <p class="attribution">
