--- a/index.html
+++ b/index.html
@@ -128,24 +128,25 @@
     </p> -->
 
 
-    <div class=".image_1">
-      <img src="./images/logo.svg" alt="logo">
+    <div class=".logo_1">
+      <img src="./images/logo.svg" alt="logo" style="height:60px;
+      width:60px; display:flex; flex-direction:row;align-items:center; margin-top:10px;">
+    </div>
 
       <div class="content">
         <span>FAQs</span>
-        <span>Contact Us</span>
         <span>Privacy Policy</span>
+        <span>Install Guide</span>
+        <span>Contact Us</span>
         <span>Press Kit</span>
-        <span> 
-          Install Guide</span>
       </div>
 
       <div class="socials">
         <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook"></a>
-        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram"></a>
         <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter"></a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram"></a>
       </div>
-    </div>
+  
   </footer>
 </body>
 </html>
