--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
        <div class="one_1">
          <img src="./images/icon-blacklist.svg" alt="blacklist">
          <h3>Create blacklists</h3>
-         <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+         <p>Ensure sensitive information never makes its<br/> way to your clipboard by excluding certain<br/> sources.
         </p>
        </div>
 
        <div class="two_2">
         <img src="./images/icon-text.svg" alt="text">
         <h3>Plain text snippets</h3>
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        <p>Remove unwanted formatting from copied text<br/> for a consistent look.</p>
       </div>
 
       <div class="three_3">
         <img src="./images/icon-preview.svg" alt="preview">
         <h3>Sneak preview</h3>
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        <p>Quick preview of all snippets on your Clipboard<br/> for easy access.</p>
       </div>
      </div>
 
