image_cont done(img dimension)

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
 
      <div class="image_cont">
-      <img src="./images/logo-google.png" alt="google">
-      <img src="./images/logo-ibm.png" alt="ibm">
-      <img src="./images/logo-microsoft.png" alt="logo-microsoft">
-      <img src="./images/logo-hp.png" alt="logo-hp">
-      <img src="./images/logo-vector-graphics.png" alt="logo-vector-graphics">
+      <img id="google"src="./images/logo-google.png" alt="google">
+      <img id="ibm"src="./images/logo-ibm.png" alt="ibm">
+      <img id="microsoft"src="./images/logo-microsoft.png" alt="logo-microsoft">
+      <img id="hp" src="./images/logo-hp.png" alt="logo-hp">
+      <img id="vector" src="./images/logo-vector-graphics.png" alt="logo-vector-graphics">
      </div>
 
 
