all done except responsiveness

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </p> -->
 
 
-    <div class=".logo_1">
+    <div class="logo_1">
       <img src="./images/logo.svg" alt="logo" style="height:60px;
       width:60px; display:flex; flex-direction:row;align-items:center; margin-top:10px;">
     </div>
@@ -142,9 +142,12 @@
       </div>
 
       <div class="socials">
-        <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook"></a>
-        <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter"></a>
-        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram"></a>
+        <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook">
+        </a>
+        <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter">
+        </a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram">
+        </a>
       </div>
   
   </footer>
