--- a/index.html
+++ b/index.html
@@ -142,12 +142,20 @@
       </div>
 
       <div class="socials">
-        <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook">
+        <div class="social_content">
+        <a href="#"><img class="social-icon" src="./images/icon-facebook.svg" alt="icon-facebook">
         </a>
-        <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter">
+        </div>
+
+        <div class="social_content">
+        <a href="#"><img class="social-icon" src="./images/icon-twitter.svg" alt="icon-twitter">
         </a>
-        <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram">
+        </div>
+
+        <div class="social_content">
+        <a href="#"><img class="social-icon" src="./images/icon-instagram.svg" alt="icon-instagram">
         </a>
+        </div>
       </div>
   
   </footer>
