--- a/index.html
+++ b/index.html
@@ -143,18 +143,21 @@
 
       <div class="socials">
         <div class="social_content">
-        <a href="#"><img class="social-icon" src="./images/icon-facebook.svg" alt="icon-facebook">
-        </a>
+          <a href="#" aria-label="Facebook profile of Clipboard">
+               <img class="social-icon" src="./images/icon-facebook.svg" alt="">
+          </a>
         </div>
 
         <div class="social_content">
-        <a href="#"><img class="social-icon" src="./images/icon-twitter.svg" alt="icon-twitter">
-        </a>
+           <a href="#" aria-label="Facebook profile of Clipboard">
+               <img class="social-icon" src="./images/icon-twitter.svg" alt="">
+          </a>
         </div>
 
         <div class="social_content">
-        <a href="#"><img class="social-icon" src="./images/icon-instagram.svg" alt="icon-instagram">
-        </a>
+          <a href="#" aria-label="Facebook profile of Clipboard">
+               <img class="social-icon" src="./images/icon-instagram.svg" alt="">
+          </a>
         </div>
       </div>
   
